tests/machine/x/cobol/fun_three_args.error
/tmp/TestCobolCompiler_VMValid_Golden3313344715/014/prog.cob:11: error: syntax error, unexpected USING
/tmp/TestCobolCompiler_VMValid_Golden3313344715/014/prog.cob: in paragraph 'FN_SUM3':
/tmp/TestCobolCompiler_VMValid_Golden3313344715/014/prog.cob:16: error: syntax error, unexpected PROCEDURE
/tmp/TestCobolCompiler_VMValid_Golden3313344715/014/prog.cob:17: error: 'A' is not defined
/tmp/TestCobolCompiler_VMValid_Golden3313344715/014/prog.cob:17: error: 'B' is not defined
/tmp/TestCobolCompiler_VMValid_Golden3313344715/014/prog.cob:17: error: 'C' is not defined, but is a reserved word in another dialect
