tests/machine/x/cobol/fun_three_args.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T07:46:59Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. FUN-THREE-ARGS.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-SUM3-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       PERFORM FN_SUM3 USING 1 2 3
       DISPLAY FN-SUM3-RES
       STOP RUN.
       
       FN_SUM3.
           PROCEDURE DIVISION USING A B C.
               COMPUTE FN-SUM3-RES = A + B + C
               EXIT.
